# BallChallenge

./: .commitlintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.json  CMakeLists.txt  README.adoc  README.md  ball_challenge.ipynb  data_exploration.ipynb  docker-compose.yml  example_model.ipynb  package-lock.json  package.json  requirements.txt
.github/workflows/: build_images.yml  create_release.yml  run_checks.yml
ballchallenge/: data_exploration.ipynb  data_loading.py  heat_map.py  plotting.py  position_prediction.py  training.py
camera_service/: main.py
camera_service/source_libs/: Camera.py  Mqtt.py
cloud/: Dockerfile  README.adoc  compose.yml  docker-compose-broker.yml  docker-compose.yml  settings.gradle.kts
cloud/app/: build.gradle.kts
cloud/app/src/main/java/de/ude/ies/elastic_ai/: BallChallengeApplication.java  BallChallengeBeans.java  BallChallengeController.java  BallChallengeEndpoint.java
cloud/app/src/main/java/de/ude/ies/elastic_ai/controller/: BallChallengeController.java  DataCollectController.java  UserController.java
cloud/app/src/main/java/de/ude/ies/elastic_ai/entities/: User.java
cloud/app/src/main/java/de/ude/ies/elastic_ai/repositories/: UserRepository.java
cloud/app/src/main/resources/: application-deploy.properties  application-development.properties  application-lab.properties  application.properties
cloud/app/src/main/resources/public/js/: countdown.js
cloud/app/src/main/resources/public/styles/: custom.css
cloud/app/src/main/resources/sql/: participants.sql
cloud/app/src/main/resources/templates/dc/: countdown.html  index.html
cloud/app/src/main/resources/templates/fragments/: layout.html
cloud/app/src/main/resources/templates/user/: index.html  info.html
enV5/: CMakeLists.txt  CMakeUserPresets.json  NetworkConfig.c  README.adoc  helper.cmake  pico_sdk_import.cmake
enV5/src/: CMakeLists.txt  Configuration.h  DataCollection.c  DataCollectionAdxl345b.c  DataCollectionBmi323.c  NeuralNetworkTest.c  Wrist.c
ml_resources/: ball_challenge.ipynb  create_dataset.py  create_smooth_labels.ipynb  data_exploration.ipynb  example_model.ipynb  utils.py  visualize_smooth_labels.ipynb
ml_resources/ballchallenge/: accelerometer_dataset.py  dummy_dataset.py  label_generation.py  model.py  model_builder.py  train_history.py  training.py
src/: Wrist.c  wrist.c
